# synthetic-data

./: README.rst  pyproject.toml
synthetic_data/: generate_data.py  single_shape.py  visualize_data.py
tests/: test_synthetic_data.py
